--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 asgiref==3.4.1
+certifi==2021.5.30
+chardet==4.0.0
 dj-database-url==0.5.0
 Django==3.2.5
 django-admin==2.0.1
@@ -9,12 +11,15 @@ django-heroku==0.3.1
 django-six==1.0.4
 djangorestframework==3.12.4
 gunicorn==20.1.0
+idna==2.10
 install==1.3.4
 Markdown==3.3.4
 psycopg2==2.9.1
 psycopg2-binary==2.9.1
 pytz==2021.1
+requests==2.25.1
 screen==1.0.1
 sqlparse==0.4.1
+urllib3==1.26.6
 whitenoise==5.2.0
 xlwt==1.3.0
